--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -14,9 +14,11 @@
                         <div class="p-12 pl-6 flex flex-col h-full">
                             <h3 class="text-7xl mb-2 ">T-Shirts</h3>
                             <p class="text-gray-600 mb-4">Starting at Rs. 1999</p>
-                            <div class="flex items-end h-full">
-                                <button class="btn bg-black text-white">Shop Now</button>
-                            </div>
+                            <a href="{% url 't-shirt' %}">
+                                <div class="flex items-end h-full">
+                                    <button class="btn bg-black text-white">Shop Now</button>
+                                </div>
+                            </a>
 
                         </div>
                     </div>
@@ -25,26 +27,27 @@
                         <div class="py-12 pl-6 flex flex-col h-full">
                             <h3 class="text-7xl mb-2 ">Hoodies</h3>
                             <p class="text-gray-600 mb-4">Starting at Rs. 3999</p>
-                            <div class="flex items-end h-full">
-                                <button class="btn bg-black text-white">Shop Now</button>
-                            </div>
-
+                            <a href="{% url 'hoodie' %}">
+                                <div class="flex items-end h-full">
+                                    <button class="btn bg-black text-white">Shop Now</button>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
 
         </div>
-     <div class="w-full flex justify-center py-12">
-                <div class="mt-8">
-                    <h3 class="text-xl text-center">COMING SOON</h3>
-                    <h3 class="text-8xl font-bold my-4">Laptop Sleeves</h3>
-                    <div class="flex justify-center">
-                        <button class="btn bg-black text-white">Shop Now</button>
-                    </div>
-
+        <div class="w-full flex justify-center py-12">
+            <div class="mt-8">
+                <h3 class="text-xl text-center">COMING SOON</h3>
+                <h3 class="text-8xl font-bold my-4">Laptop Sleeves</h3>
+                <div class="flex justify-center">
+                    <button class="btn bg-black text-white">Shop Now</button>
                 </div>
+
             </div>
+        </div>
 
     </div>
 
