--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,4 +1,5 @@
 {% extends "store/base.html" %}
+{% block title %} Cart {% endblock %}
 {% block content %}
     {% load static %}
     {% if items %}
