--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,4 +1,7 @@
-{% extends "store/base.html" %} {% block content %}
+{% extends "store/base.html" %}
+{% block title %} Home {% endblock %}
+
+{% block content %}
     {% load static %}
     <div class=" py-6 px-24  ">
         <div class=" p-6 h-svh ">
