--- a/store/templates/store/store_hoodie.html
+++ b/store/templates/store/store_hoodie.html
@@ -5,7 +5,7 @@
 
 
     <div class="flex flex-col items-center justify-center">
-        <h1 class="font-black text-9xl py-24 h-1/3 flex justify-center">Hoodie</h1>
+        <h1 class="font-black text-9xl py-12 2xl:py-24 h-1/3 flex justify-center">Hoodie</h1>
 
         <div class="flex pt-24  items-center h-1/3">
             <div class="flex  space-x-24 ">
@@ -16,7 +16,7 @@
 
                 </div>
                 <div class="card w-1/3 bg-base-100 shadow-xl">
-                    <figure class="px-10 pt-24">
+                    <figure class="px-10 pt-12 2xl:pt-24">
                         <img id="hoodie-design" class="h-full w-auto" src="{% static 'images/generated_image1.jpg' %}">
                     </figure>
                 </div>
@@ -74,7 +74,7 @@
                     <a href="{% url 'generate_image_hoodie' %}?refresh=true">
                         <button class="btn btn-outline btn-primary " onclick="addToCart()">Add to Cart</button>
                     </a>
-                    
+
                 </div>
             </div>
         </div>
