--- a/store/templates/store/store_tshirt.html
+++ b/store/templates/store/store_tshirt.html
@@ -4,9 +4,9 @@
  {% block content %}
 
     <div class="flex flex-col items-center justify-center">
-        <h1 class="font-black text-9xl py-24 h-1/3 flex justify-center">T-Shirt</h1>
+        <h1 class="font-black text-9xl py-12 2xl:py-24 h-1/3 flex justify-center">T-Shirt</h1>
 
-        <div class="flex pt-24  items-center h-1/3">
+        <div class="flex pt-6 2xl:pt-24  items-center h-1/3">
             <div class="flex  space-x-24 ">
                 <div class="card w-1/3 bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
@@ -15,7 +15,7 @@
 
                 </div>
                 <div class="card w-1/3 bg-base-100 shadow-xl">
-                    <figure class="px-10 pt-24">
+                    <figure class="px-10 pt-12 2xl:pt-24">
                         <img id="tshirt-design" class="h-full w-auto" src="{% static 'images/generated_image.jpg' %}">
                     </figure>
                 </div>
